commit 21.4. analyza timu done

--- a/Diplomka/Diploma/DP_UHR0019/DP_UHR0019.tex
+++ b/Diplomka/Diploma/DP_UHR0019/DP_UHR0019.tex
@@ -951,29 +951,30 @@ V na obr. \ref{team_ssrm} sú zobrazené počty detekovaných štrukturálnych r
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=5cm, height=3.5cm]{figures/team_ssrm}
+\includegraphics[width=6cm, height=4cm]{figures/team_ssrm}
 \caption{Počet detekovaných štrukturálnyh rôl}
 \label{team_ssrm}
 \end{figure}
 
 
 \paragraph{Brokerage}
-V na obr. \ref{team_brokerage} je zobrazených desať najväčších \textit{broker} aktérov v sieti spolu s grafom ich čiatkovým skóre pre každú \textit{brokerage} rolu, ako aj celkové \textit{brokerage} skóre.
+\hfill \break
+V na obr. \ref{team_brokerage_tab} a \ref{team_brokerage_graph} je zobrazených desať najväčších \textit{broker} aktérov v sieti spolu s grafom ich čiatkovým skóre pre každú \textit{brokerage} rolu, ako aj celkové \textit{brokerage} skóre.
 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=15cm, height=7cm]{figures/team_brokerage_tab}
-\caption{Rozloženie komunít za tretí časový úsek}
-\label{team_brokerage}
+\includegraphics[width=15cm, height=6cm]{figures/team_brokerage_tab}
+\caption{Desať aktérov s najväčším \textit{brokerage} skóre}
+\label{team_brokerage_tab}
 \end{figure}
 
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=15cm, height=6cm]{figures/team_brokerage_graph}
-\caption{Rozloženie komunít za tretí časový úsek}
-\label{team_brokerage}
+\caption{Desať aktérov s najväčším \textit{brokerage} skóre - graf}
+\label{team_brokerage_graph}
 \end{figure}
 
 \subsection{Analýza jednotlivcov}
@@ -1088,7 +1089,6 @@ from the enron email corpus it’s always about the people. Enron is no differen
 \end{thebibliography}
 
 
-\newpage
 
 \bibliography{mybib} 
 \bibliographystyle{ieeetr}
