vymazane nepotrebne casti  + referencie hotove

--- a/Diplomka/Diploma/DP_UHR0019/DP_UHR0019.tex
+++ b/Diplomka/Diploma/DP_UHR0019/DP_UHR0019.tex
@@ -1,6 +1,4 @@
-% Nejprve uvedeme tridu dokumentu s volbami
 \documentclass[slovak,master,public,dept460,male,cpdeclaration,oneside]{diploma}
-% Dalsi doplnujici baliky maker
 \usepackage{subfig}		% makra pro "podobrazky" a "podtabulky"
 \usepackage{tikz}		% makra pro kresleni
 \usepackage{amssymb}
@@ -666,15 +664,11 @@ ${
 \end{figure}
 
 
-Koncept štrukturálnych dier je koncept analýzy sociálnych sietí vyvinutý R. S. Burtom. Predstavil tento pojem v snahe vysvetliť vznik rozdielov v sociálnom kapitále. Burtova teória naznačuje, že jednotlivci majú isté výhody alebo nevýhody podľa toho, ako sú zakotvené v spoločenských štruktúrach. Štrukturálna diera je chápaná ako medzera medzi dvoma jednotlivcami (chýbajúca hrana medzi uzlami), ktorí majú doplňujúce zdroje informácií. \textit{Burt, R. (2004). "Structural holes and good ideas". American Journal of Sociology (110): 349–399.} - doplnit citaciu
+Koncept štrukturálnych dier je koncept analýzy sociálnych sietí vyvinutý R. S. Burtom. Predstavil tento pojem v snahe vysvetliť vznik rozdielov v sociálnom kapitále. Burtova teória naznačuje, že jednotlivci majú isté výhody alebo nevýhody podľa toho, ako sú zakotvené v spoločenských štruktúrach. Štrukturálna diera je chápaná ako medzera medzi dvoma jednotlivcami (chýbajúca hrana medzi uzlami), ktorí majú doplňujúce zdroje informácií. \cite{burt2004structural}
 
 \paragraph{Efektívna sila}
 \hfill \break
-Burt predstavil mieru redundancie siete, Borgatti vyvinul zjednodušenú verziu efektívnej veľkosti pre nevážené siete. (doplnit citaciu:   Borgatti, Stephen (1997). "Structural Holes: Unpacking Burt's Redundancy Measures". Connections. INSNA. Retrieved 2016.)
-
- Redundancia ${ = \frac{2t}{n}}$, kde \textit{t} je počet všetkých spojení v egocentrickej sieti (s výnimkou spojení k egu) a \textit{n} je počet všetkých uzlov v egocentrickej sieti (s výnimoku ega). Táto formula môže byť modifikovaná pre výpočet efektívnej sily ego siete.
-
- Efektívna sila ego siete ${ = n - \frac{2t}{n}}$ (rozdiel počtu \textit{alter} uzlov ega a sumy ich redundancií = ${6-1.33 = 4.67}$)
+Burt predstavil mieru redundancie siete, Borgatti vyvinul zjednodušenú verziu efektívnej veľkosti pre nevážené siete \cite{borgatti1997structural}. Redundancia ${ = \frac{2t}{n}}$, kde \textit{t} je počet všetkých spojení v egocentrickej sieti (s výnimkou spojení k egu) a \textit{n} je počet všetkých uzlov v egocentrickej sieti (s výnimoku ega). Táto formula môže byť modifikovaná pre výpočet efektívnej sily ego siete. Efektívna sila ego siete ${ = n - \frac{2t}{n}}$ (rozdiel počtu \textit{alter} uzlov ega a sumy ich redundancií = ${6-1.33 = 4.67}$)
 
 
 \begin{figure}[H]
