--- a/Diplomka/Diploma/DP_UHR0019/mybib.bib
+++ b/Diplomka/Diploma/DP_UHR0019/mybib.bib
@@ -94,7 +94,7 @@
 @misc{11,
   title = {{Active Record vs. Repository pattern} Repository pattern},
   howpublished = {\url{https://www.rarous.net/weblog/271-active-record-vs-repository-pattern.aspx}},
-  note = {2017-09-30}
+  note = {2018-01-15}
 }
 
 @article{12,
@@ -111,13 +111,13 @@
 @misc{13,
   title = {Do Millennial and Gen Z Consumers Still Use Email?},
   howpublished = {\url{https://www.bluecore.com/blog/do-millennials-use-email/}},
-  note = {2017-09-30}
+  note = {2017-03-30}
 }
 
 @misc{14,
   title = {vis.js},
   howpublished = {\url{http://visjs.org/}},
-  note = {2017-09-30}
+  note = {2017-01-30}
 }
 
 @article{15,
@@ -184,5 +184,26 @@
   author={DeJordy, Rich and Halgin, Dan},
   journal={Boston MA: Boston College and the Winston Center for Leadership \& Ethics},
   year={2008}
+}
+
+@article{burt2004structural,
+  title={Structural holes and good ideas},
+  author={Burt, Ronald S},
+  journal={American journal of sociology},
+  volume={110},
+  number={2},
+  pages={349--399},
+  year={2004},
+  publisher={The University of Chicago Press}
+}
+
+@article{borgatti1997structural,
+  title={Structural holes: Unpacking Burt’s redundancy measures},
+  author={Borgatti, Stephen P},
+  journal={Connections},
+  volume={20},
+  number={1},
+  pages={35--38},
+  year={1997}
 }
 
